--- a/requirements.txt
+++ b/requirements.txt
@@ -35,9 +35,11 @@ idna==3.8
 ipykernel==6.29.5
 ipython==8.27.0
 ipython-genutils==0.2.0
+ipywidgets==8.1.5
 isoduration==20.11.0
 jedi==0.19.1
 Jinja2==3.1.4
+joblib==1.4.2
 json5==0.9.25
 jsonpointer==3.0.0
 jsonschema==4.23.0
@@ -51,11 +53,14 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.2.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
 jupyterthemes @ git+https://github.com/dunovank/jupyter-themes.git@7b1b6a0991eaff84420bfc558db2eca87d92be09
+kaleido==0.2.1
 keras==3.5.0
 kiwisolver==1.4.7
 lesscpy==0.15.1
 libclang==18.1.1
+llvmlite==0.43.0
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -72,6 +77,7 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.2.2
 notebook_shim==0.2.4
+numba==0.60.0
 numpy==1.26.4
 opt-einsum==3.3.0
 optree==0.12.1
@@ -80,6 +86,7 @@ packaging==24.1
 pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.4
+patsy==0.5.6
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.3.2
@@ -91,8 +98,11 @@ protobuf==4.25.4
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyAgrum==1.17.2
 pycparser==2.22
+pydot==3.0.3
 Pygments==2.18.0
+pynndescent==0.5.13
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
@@ -105,6 +115,8 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.8.0
 rpds-py==0.20.0
+scikit-learn==1.5.1
+scipy==1.14.1
 seaborn==0.13.2
 Send2Trash==1.8.3
 setuptools==74.1.2
@@ -112,18 +124,22 @@ six==1.16.0
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
+statsmodels==0.14.2
 tenacity==9.0.0
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
 termcolor==2.4.0
 terminado==0.18.1
+threadpoolctl==3.5.0
 tinycss2==1.3.0
 tornado==6.4.1
+tqdm==4.66.5
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20240906
 typing_extensions==4.12.2
 tzdata==2024.1
+umap-learn==0.5.6
 uri-template==1.3.0
 urllib3==2.2.2
 wcwidth==0.2.13
@@ -132,4 +148,5 @@ webencodings==0.5.1
 websocket-client==1.8.0
 Werkzeug==3.0.4
 wheel==0.44.0
+widgetsnbextension==4.0.13
 wrapt==1.16.0
